<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/appNameId"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="165dp" android:layout_marginBottom="106dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" android:layout_marginEnd="178dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="228dp"
            android:layout_height="216dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="289dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="226dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="91dp" android:layout_marginEnd="92dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">
        <Button
                android:text="@string/button_simple_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonSimpleId"/>
        <Button
                android:text="@string/button_advanced_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonAdvId"/>
        <Button
                android:text="@string/button_about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonAboutId"/>
        <Button
                android:text="@string/button_exit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonExitId"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>